--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+flask-swagger-ui
 python-jose
 blinker==1.9.0
 click==8.3.0
@@ -26,4 +27,6 @@ typing==3.7.4.3
 typing_extensions==4.15.0
 Werkzeug==3.1.3
 wrapt==1.17.3
-flask_caching
+Flask-Caching
+python-jose
+flask-swagger-ui
